# speech_recognition

./: .gitignore  CMakeLists.txt  LIBRARY_GUIDE.md  README.md  sdkconfig.defaults
components/aura_sr/: CMakeLists.txt  aura_sr.c
components/aura_sr/include/: aura_sr.h
main/: CMakeLists.txt  idf_component.yml  main.c
sim_pc/: Makefile  aura_sim.py  aura_sr_sim.c  diagnose_mic.py  main_sim.c  voice_test_pc.py
